--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SeoulFiesta</string>
+    <string name="backend_url">http://192.168.0.3:8080</string>
 </resources>
