add getDaysOffPerYear service on UserService. change User Object to UserJson. add get user on user api. create retrofit test util to create error response object.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SeoulFiesta</string>
+    <string name="remaining_days_off">잔여 휴가일</string>
+    <string name="request_day_off">휴가 신청</string>
 </resources>
